@@ -1,6 +1,6 @@
 Package: RQuantLib
 Title: R Interface to the QuantLib Library
-Version: 0.4.0.1
+Version: 0.4.0.2
 Date: 2014-12-03
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Author: Dirk Eddelbuettel, Khanh Nguyen (during 2009-2010)
