@@ -1,6 +1,9 @@
-# RQuantLib
+## RQuantLib  [![Build Status](https://travis-ci.org/eddelbuettel/rquantlib.svg)](https://travis-ci.org/eddelbuettel/rquantlib) [![License](http://img.shields.io/badge/license-GPL%20%28%3E=%202%29-brightgreen.svg?style=flat)](http://www.gnu.org/licenses/gpl-2.0.html) [![CRAN](http://www.r-pkg.org/badges/version/RQuantLib)](http://cran.rstudio.com/package=RcppRQuantLib) [![Downloads](http://cranlogs.r-pkg.org/badges/RQuantLib?color=brightgreen)](http://www.r-pkg.org/pkg/RQuantLib)
 
-[![Build Status](https://travis-ci.org/eddelbuettel/rquantlib.png)](https://travis-ci.org/eddelbuettel/rquantlib)
+
+[![Build Status](https://travis-ci.org/eddelbuettel/rquantlib.svg](https://travis-ci.org/eddelbuettel/rquantlib)
+
+### About
 
 The RQuantLib package makes parts of [QuantLib](https://github.com/lballabio/quantlib) visible to the R
 user. Currently a number option pricing functions are included, both vanilla
@@ -13,11 +16,11 @@ quantitative finance. The goal is to provide a standard open source library
 for quantitative analysis, modeling, trading, and risk management of
 financial assets.
 
-## Authors
+### Authors
 
 Dirk Eddelbuettel and Khanh Nguyen (during 2009-2010)
 
-## License
+### License
 
 GPL (>= 2)
 
